--- a/package.json
+++ b/package.json
@@ -5,16 +5,18 @@
   "license": "MIT",
   "scripts": {
     "dev": "nodemon",
-    "test": "jest"
+    "test": "jest --watch"
   },
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "uuid": "^8.3.0",
     "uuidv4": "^6.0.7"
   },
   "devDependencies": {
     "jest": "^25.2.6",
     "nodemon": "^2.0.2",
+    "prettier": "^2.0.5",
     "supertest": "^4.0.2"
   }
 }
